# python-labs

./: .gitignore  pyproject.toml  pyspark_gcs.py  requirements.txt  utils.py
notebooks/forex_ai/: convert_data.ipynb
notebooks/forex_data/: convert_data.ipynb
