[tool.poetry]
name = "labs"
version = "0.1.0"
description = "Devsiam : Experiment Labs"
authors = ["Kittawee Kongpan <kittawee9469@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.11"
# jupyterlab = "^4.0.9"
# pyspark = "^3.5.0"
pandas = "^2.1.3"
polars = "^0.19.15"
# scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
# seaborn = "^0.13.0"
# jupyter-black = "^0.3.4"
# python-dotenv = "^1.0.1"
# google-cloud-storage = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
